--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,14 @@ spring:
   data:
     mongodb:
       uri: mongodb://test:123456@localhost:27017/test
-
-logging.level.org:
-    springframework:
-        data.mongodb.core.MongoTemplate: debug
+  datasource:
+    url: jdbc:mysql://localhost:3306/test?useUnicode=true&autoReconnect=true&rewriteBatchedStatements=TRUE
+    username: root
+    password: 123456
+  jpa:
+    hibernate:
+      ddl-auto: update
+      use-new-id-generator-mappings: false
+    show-sql: false
+    properties:
+      hibernate.dialect: org.hibernate.dialect.MySQL55Dialect
